--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,18 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Background="#F8F8F8">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="218,191,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="178">
+        <Button x:Name="MyButton" Content="計算質數" HorizontalAlignment="Left" Margin="492,43,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="82" Width="152" Background="#FFB5B5B5" Click="CalculatePrimes" FontSize="20">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="-5.699"/>
+                    <RotateTransform Angle="0"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
+        <Label Content="請輸入數值" HorizontalAlignment="Left" Margin="154,67,0,0" VerticalAlignment="Top" Height="54" Width="141" FontSize="24" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="-0.448"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="-0.492"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <TextBox x:Name="MyTextBox" HorizontalAlignment="Left" Margin="331,73,0,0" TextWrapping="Wrap" Text="2" VerticalAlignment="Top" Width="103" Height="22"/>
+        <TextBlock x:Name="MyTextBlock" HorizontalAlignment="Left" Margin="141,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="223" Width="484" FontSize="18"/>
 
     </Grid>
 </Window>
